fixed gap btwn divs

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
 :root {
     --primary-color: #FF9999;
     --secondary-color: #FF9393A8;
+    --tertiary-color: #FAC8C8;
 }
 
 
@@ -29,6 +30,7 @@ a {
     width: 100%;
     height: 391px;
     background-color: var(--secondary-color);
+    margin:0;
 }
 
 // .header-container {
@@ -78,15 +80,19 @@ nav {
 
 
 .main-post {
-    margin-top: 20px;
+    background-color: #FFF5F5;
+    padding-top: 20px;
+    position: relative;
+    z-index: -12;
+    display: inline;
 }
 
 .main-post-title {
+    position: relative;
     text-align: center;
-    padding: 10px;
     font-size: 40px;
     line-height: 1.3em;
-    z-index: auto;
+    z-index: 5;
 }
 
 .underline {
@@ -95,16 +101,27 @@ nav {
     background-color: black;
     position: absolute;
     left: 132px;
-    bottom: 90px;
-    z-index: -1;
-    
+    bottom: 100px;
 }
 
 .desc {
     text-align: center;
+    padding: 10px;
+}
+
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .read-article-btn {
-    
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5%;
+    border: none;
+    background-color: var(--tertiary-color);
+    text-transform: uppercase;
 }
 
